@@ -4,6 +4,7 @@
 BZFlag 2.1.x
 ------------
 
+* Added new bzfs -botsPerIP option to limit bot connections - Sean Morrison
 * Updated zlib to version 1.2.3 - Sean Morrison
 * Anti-aliased rendering option - Snick
 * Added bzfscron plugin to execute commands on time intervals - Daniel Remenak
